# HW_WEB9

./: README.md  authors.json  connection.py  find_from_db.py  main.py  models.py  pyproject.toml  quotes.json  upload_db.py
hw_web9/: scrapy.cfg
hw_web9/hw_web9/: items.py  middlewares.py  pipelines.py  settings.py
hw_web9/hw_web9/spiders/: authors.py
tests/: main.py
