[tool.poetry]
name = "hw-web9"
version = "0.1.0"
description = ""
authors = ["Denko <officedenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
mongoengine = "^0.27.0"
docker = "^6.1.3"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
